Fixing delete icon and white bg alignment issue

--- a/app/components/deletable-list-item/styles.scss
+++ b/app/components/deletable-list-item/styles.scss
@@ -10,7 +10,6 @@
     font-size: 120%;
     background-color: white;
     border-radius: 20px;
-    height: 20px;
-    width: 20px;
+    line-height: 1;
   }
 }
